moved controls lower to avoid titlebar overlapping

--- a/scripts/css/multiple-select.css
+++ b/scripts/css/multiple-select.css
@@ -190,3 +190,7 @@
 .ms-drop .ms-no-results {
     display: none;
 }
+
+.mapboxgl-ctrl-top-right {
+    top:50px;
+}
